clientelling/objects/Purchase__c.object
<CustomObject>
    <description>Retail IDO Custom Object</description>
    
    <fields>
        <fullName>Account__c</fullName>
        <description>Retail IDO Custom Field</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchases</relationshipLabel>
        <relationshipName>Item_Interestsab</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE( Product__r.Image_URL__c  , &quot;No Image&quot;, 180, 120)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Purchases</relationshipLabel>
        <relationshipName>Purchases</relationshipName>
        <type>Lookup</type>
    </fields>
  <!-- <fields>
        <fullName>Purchase_Amount__c</fullName>
        <description>Retail IDO Custom Field</description>
        <label>Purchase Amount</label>
        <summarizedField>Purchase_Item__c.Total_Amount__c</summarizedField>
        <summaryForeignKey>Purchase_Item__c.Purchase_History__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields> -->
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Retail IDO Custom Field</description>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Retail IDO Custom Field</description>
        <label>Purchased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Retail IDO Custom Field</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Purchase History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Purchase ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>